upload final edits
Updated the codes for final submission

--- a/edit_data/Lee/data_cleanup_movies_df.ipynb
+++ b/edit_data/Lee/data_cleanup_movies_df.ipynb
@@ -3137,246 +3137,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Id</th>\n",
-       "      <th>Original_Title</th>\n",
-       "      <th>Original_Language</th>\n",
-       "      <th>Spoken_Languages</th>\n",
-       "      <th>Budget</th>\n",
-       "      <th>Revenue</th>\n",
-       "      <th>Runtime</th>\n",
-       "      <th>Release_Date</th>\n",
-       "      <th>Production_Companies</th>\n",
-       "      <th>Production_Countries</th>\n",
-       "      <th>imdb_id</th>\n",
-       "      <th>Popularity</th>\n",
-       "      <th>Vote_Average</th>\n",
-       "      <th>Vote_Count</th>\n",
-       "      <th>Belongs_To_Collection</th>\n",
-       "      <th>Tagline</th>\n",
-       "      <th>Overview</th>\n",
-       "      <th>Genres</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>862</td>\n",
-       "      <td>Toy Story</td>\n",
-       "      <td>en</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
-       "      <td>30000000.0</td>\n",
-       "      <td>373554033.0</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>1995-10-30</td>\n",
-       "      <td>[{'name': 'Pixar Animation Studios', 'id': 3}]</td>\n",
-       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
-       "      <td>tt0114709</td>\n",
-       "      <td>21.946943</td>\n",
-       "      <td>7.7</td>\n",
-       "      <td>5415.0</td>\n",
-       "      <td>{'id': 10194, 'name': 'Toy Story Collection', ...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Led by Woody, Andy's toys live happily in his ...</td>\n",
-       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 35, '...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>8844</td>\n",
-       "      <td>Jumanji</td>\n",
-       "      <td>en</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}, {'iso...</td>\n",
-       "      <td>65000000.0</td>\n",
-       "      <td>262797249.0</td>\n",
-       "      <td>104.0</td>\n",
-       "      <td>1995-12-15</td>\n",
-       "      <td>[{'name': 'TriStar Pictures', 'id': 559}, {'na...</td>\n",
-       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
-       "      <td>tt0113497</td>\n",
-       "      <td>17.015539</td>\n",
-       "      <td>6.9</td>\n",
-       "      <td>2413.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Roll the dice and unleash the excitement!</td>\n",
-       "      <td>When siblings Judy and Peter discover an encha...</td>\n",
-       "      <td>[{'id': 12, 'name': 'Adventure'}, {'id': 14, '...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>15602</td>\n",
-       "      <td>Grumpier Old Men</td>\n",
-       "      <td>en</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>101.0</td>\n",
-       "      <td>1995-12-22</td>\n",
-       "      <td>[{'name': 'Warner Bros.', 'id': 6194}, {'name'...</td>\n",
-       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
-       "      <td>tt0113228</td>\n",
-       "      <td>11.712900</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>{'id': 119050, 'name': 'Grumpy Old Men Collect...</td>\n",
-       "      <td>Still Yelling. Still Fighting. Still Ready for...</td>\n",
-       "      <td>A family wedding reignites the ancient feud be...</td>\n",
-       "      <td>[{'id': 10749, 'name': 'Romance'}, {'id': 35, ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>31357</td>\n",
-       "      <td>Waiting to Exhale</td>\n",
-       "      <td>en</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
-       "      <td>16000000.0</td>\n",
-       "      <td>81452156.0</td>\n",
-       "      <td>127.0</td>\n",
-       "      <td>1995-12-22</td>\n",
-       "      <td>[{'name': 'Twentieth Century Fox Film Corporat...</td>\n",
-       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
-       "      <td>tt0114885</td>\n",
-       "      <td>3.859495</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Friends are the people who let you be yourself...</td>\n",
-       "      <td>Cheated on, mistreated and stepped on, the wom...</td>\n",
-       "      <td>[{'id': 35, 'name': 'Comedy'}, {'id': 18, 'nam...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>11862</td>\n",
-       "      <td>Father of the Bride Part II</td>\n",
-       "      <td>en</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>76578911.0</td>\n",
-       "      <td>106.0</td>\n",
-       "      <td>1995-02-10</td>\n",
-       "      <td>[{'name': 'Sandollar Productions', 'id': 5842}...</td>\n",
-       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
-       "      <td>tt0113041</td>\n",
-       "      <td>8.387519</td>\n",
-       "      <td>5.7</td>\n",
-       "      <td>173.0</td>\n",
-       "      <td>{'id': 96871, 'name': 'Father of the Bride Col...</td>\n",
-       "      <td>Just When His World Is Back To Normal... He's ...</td>\n",
-       "      <td>Just when George Banks has recovered from his ...</td>\n",
-       "      <td>[{'id': 35, 'name': 'Comedy'}]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Id               Original_Title Original_Language  \\\n",
-       "0    862                    Toy Story                en   \n",
-       "1   8844                      Jumanji                en   \n",
-       "2  15602             Grumpier Old Men                en   \n",
-       "3  31357            Waiting to Exhale                en   \n",
-       "4  11862  Father of the Bride Part II                en   \n",
-       "\n",
-       "                                    Spoken_Languages      Budget      Revenue  \\\n",
-       "0           [{'iso_639_1': 'en', 'name': 'English'}]  30000000.0  373554033.0   \n",
-       "1  [{'iso_639_1': 'en', 'name': 'English'}, {'iso...  65000000.0  262797249.0   \n",
-       "2           [{'iso_639_1': 'en', 'name': 'English'}]         0.0          0.0   \n",
-       "3           [{'iso_639_1': 'en', 'name': 'English'}]  16000000.0   81452156.0   \n",
-       "4           [{'iso_639_1': 'en', 'name': 'English'}]         0.0   76578911.0   \n",
-       "\n",
-       "   Runtime Release_Date                               Production_Companies  \\\n",
-       "0     81.0   1995-10-30     [{'name': 'Pixar Animation Studios', 'id': 3}]   \n",
-       "1    104.0   1995-12-15  [{'name': 'TriStar Pictures', 'id': 559}, {'na...   \n",
-       "2    101.0   1995-12-22  [{'name': 'Warner Bros.', 'id': 6194}, {'name'...   \n",
-       "3    127.0   1995-12-22  [{'name': 'Twentieth Century Fox Film Corporat...   \n",
-       "4    106.0   1995-02-10  [{'name': 'Sandollar Productions', 'id': 5842}...   \n",
-       "\n",
-       "                                Production_Countries    imdb_id  Popularity  \\\n",
-       "0  [{'iso_3166_1': 'US', 'name': 'United States o...  tt0114709   21.946943   \n",
-       "1  [{'iso_3166_1': 'US', 'name': 'United States o...  tt0113497   17.015539   \n",
-       "2  [{'iso_3166_1': 'US', 'name': 'United States o...  tt0113228   11.712900   \n",
-       "3  [{'iso_3166_1': 'US', 'name': 'United States o...  tt0114885    3.859495   \n",
-       "4  [{'iso_3166_1': 'US', 'name': 'United States o...  tt0113041    8.387519   \n",
-       "\n",
-       "   Vote_Average  Vote_Count  \\\n",
-       "0           7.7      5415.0   \n",
-       "1           6.9      2413.0   \n",
-       "2           6.5        92.0   \n",
-       "3           6.1        34.0   \n",
-       "4           5.7       173.0   \n",
-       "\n",
-       "                               Belongs_To_Collection  \\\n",
-       "0  {'id': 10194, 'name': 'Toy Story Collection', ...   \n",
-       "1                                                NaN   \n",
-       "2  {'id': 119050, 'name': 'Grumpy Old Men Collect...   \n",
-       "3                                                NaN   \n",
-       "4  {'id': 96871, 'name': 'Father of the Bride Col...   \n",
-       "\n",
-       "                                             Tagline  \\\n",
-       "0                                                NaN   \n",
-       "1          Roll the dice and unleash the excitement!   \n",
-       "2  Still Yelling. Still Fighting. Still Ready for...   \n",
-       "3  Friends are the people who let you be yourself...   \n",
-       "4  Just When His World Is Back To Normal... He's ...   \n",
-       "\n",
-       "                                            Overview  \\\n",
-       "0  Led by Woody, Andy's toys live happily in his ...   \n",
-       "1  When siblings Judy and Peter discover an encha...   \n",
-       "2  A family wedding reignites the ancient feud be...   \n",
-       "3  Cheated on, mistreated and stepped on, the wom...   \n",
-       "4  Just when George Banks has recovered from his ...   \n",
-       "\n",
-       "                                              Genres  \n",
-       "0  [{'id': 16, 'name': 'Animation'}, {'id': 35, '...  \n",
-       "1  [{'id': 12, 'name': 'Adventure'}, {'id': 14, '...  \n",
-       "2  [{'id': 10749, 'name': 'Romance'}, {'id': 35, ...  \n",
-       "3  [{'id': 35, 'name': 'Comedy'}, {'id': 18, 'nam...  \n",
-       "4                     [{'id': 35, 'name': 'Comedy'}]  "
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#verify rename is successfully done\n",
-    "movies_df.head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Parse JSON to Python Object (list)\n",
     "- ['Genres']\n",
-    "- ['Belongs_To_Collection']\n",
-    "- ['Production_Companies']\n",
-    "- ['Production_Countries']\n",
-    "- ['Spoken_Languages']"
+    "- ['Belongs_To_Collection']"
    ]
   },
   {
@@ -3688,9 +3454,6 @@
     "    \n",
     "movies_df['Genres_Parse'] = movies_df['Genres'].apply(extract_names)\n",
     "movies_df['Belongs_To_Collection_Parse'] = movies_df['Belongs_To_Collection'].apply(extract_names)\n",
-    "movies_df['Spoken_Languages_Parse'] = movies_df['Spoken_Languages'].apply(extract_names)\n",
-    "movies_df['Production_Companies_Parse'] = movies_df['Production_Companies'].apply(extract_names)\n",
-    "movies_df['Production_Countries_Parse'] = movies_df['Production_Countries'].apply(extract_names)\n",
     "\n",
     "movies_df.head()\n"
    ]
@@ -3709,20 +3472,20 @@
     }
    ],
    "source": [
-    "### TEST : to generate a unique list of genres\n",
+    "# ### TEST : to generate a unique list of genres\n",
     "\n",
-    "# Flatten the list of genres, ignoring NaN values, and extract unique values\n",
-    "unique_genres = set(\n",
-    "    genre\n",
-    "    for sublist in movies_df['Genres_Parse'].dropna()  # Drop NaN values\n",
-    "    for genre in sublist\n",
-    ")\n",
+    "# # Flatten the list of genres, ignoring NaN values, and extract unique values\n",
+    "# unique_genres = set(\n",
+    "#     genre\n",
+    "#     for sublist in movies_df['Genres_Parse'].dropna()  # Drop NaN values\n",
+    "#     for genre in sublist\n",
+    "# )\n",
     "\n",
-    "# Convert the set to a sorted list (optional)\n",
-    "unique_genres_list = sorted(unique_genres)\n",
+    "# # Convert the set to a sorted list (optional)\n",
+    "# unique_genres_list = sorted(unique_genres)\n",
     "\n",
-    "# Display the unique genres\n",
-    "print(unique_genres_list)"
+    "# # Display the unique genres\n",
+    "# print(unique_genres_list)"
    ]
   },
   {
@@ -3738,15 +3501,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to parse the string and extract names\n",
-    "def extract_country_code(column_string):\n",
-    "    # Safely evaluate the string to a Python object\n",
-    "    column_list = ast.literal_eval(column_string)\n",
-    "    # Extract names\n",
-    "    country_code = [column['iso_3166_1'] for column in column_list]\n",
-    "    return country_code\n",
+    "# # Function to parse the string and extract names\n",
+    "# def extract_country_code(column_string):\n",
+    "#     # Safely evaluate the string to a Python object\n",
+    "#     column_list = ast.literal_eval(column_string)\n",
+    "#     # Extract names\n",
+    "#     country_code = [column['iso_3166_1'] for column in column_list]\n",
+    "#     return country_code\n",
     "\n",
-    "movies_df['Production_Countries_Code_Parse'] = movies_df['Production_Countries'].apply(extract_country_code)\n"
+    "# movies_df['Production_Countries_Code_Parse'] = movies_df['Production_Countries'].apply(extract_country_code)\n"
    ]
   },
   {
