--- a/edit_data/Lee/wordcloud.ipynb
+++ b/edit_data/Lee/wordcloud.ipynb
@@ -399,7 +399,7 @@
     }
    ],
    "source": [
-    "#wordcloud for Keywords alone\n",
+    "#wordcloud for Keywords only\n",
     "# string_text_1\n",
     "\n",
     "from wordcloud import WordCloud\n",
@@ -443,7 +443,8 @@
     }
    ],
    "source": [
-    "\n",
+    "#wordcloud for all Keywords, Tagline, Overview\n",
+    "# string_text_1\n",
     "\n",
     "# use the standard stopwords in the WordCloud english library (https://github.com/amueller/word_cloud#word_cloud)\n",
     "stopwords = set(STOPWORDS)\n",
