Final Update of the models

--- a/edit_data/Chan/Tkinter Model.ipynb
+++ b/edit_data/Chan/Tkinter Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,19 @@
     "import json\n",
     "import re\n",
     "import nltk\n",
+    "import requests\n",
     "import tkinter as tk\n",
     "from tkinter import ttk\n",
-    "import ast"
+    "import ast\n",
+    "from PIL import Image, ImageTk\n",
+    "from io import BytesIO\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.neighbors import NearestNeighbors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +51,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +207,7 @@
        "[2 rows x 28 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,37 +465,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"c:\\Python312\\Lib\\tkinter\\__init__.py\", line 1968, in __call__\n",
-      "    return self.func(*args)\n",
-      "           ^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_34772\\2433363470.py\", line 91, in display_recommendations\n",
-      "    image = Image.open(image_path)\n",
-      "            ^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"c:\\Python312\\Lib\\site-packages\\PIL\\Image.py\", line 3277, in open\n",
-      "    fp = builtins.open(filename, \"rb\")\n",
-      "         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "FileNotFoundError: [Errno 2] No such file or directory: 'C:\\\\Users\\\\chanc\\\\Documents\\\\GitHub\\\\Techlabs-DS5\\\\edit_data\\\\Chan\\\\example_poster.jpg'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tkinter as tk\n",
     "from tkinter import ttk\n",
-    "from PIL import Image, ImageTk\n",
     "import pandas as pd\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.neighbors import NearestNeighbors\n",
     "\n",
     "# Assuming the movies_df DataFrame has been loaded and preprocessed with combined features\n",
+    "\n",
+    "# Combine relevant text features into a single string for vectorization\n",
+    "movies_df['combined_features'] = movies_df[['Tagline', 'Overview', 'Keywords_parse']].fillna('').agg(' '.join, axis=1)\n",
     "\n",
     "# Initialize TF-IDF Vectorizer\n",
     "tfidf = TfidfVectorizer(stop_words='english')\n",
@@ -520,10 +508,11 @@
     "    \n",
     "    similarity_scores = 1 - similar_movies_distances\n",
     "    \n",
-    "    similar_movies = data.iloc[similar_movies_indices][['Original_Title']]\n",
+    "    # Select only the relevant columns without including the index or any ID\n",
+    "    similar_movies = data.iloc[similar_movies_indices][['Original_Title', 'Original_Language']]\n",
     "    similar_movies['Similarity_Score'] = similarity_scores\n",
     "    \n",
-    "    return similar_movies\n",
+    "    return similar_movies.reset_index(drop=True)  # Reset the index to avoid showing any ID\n",
     "\n",
     "# Create the GUI application using Tkinter\n",
     "class MovieRecommenderApp(tk.Tk):\n",
@@ -531,31 +520,27 @@
     "        super().__init__()\n",
     "\n",
     "        self.title(\"Movie Recommender\")\n",
-    "        self.geometry(\"600x600\")  # Increase the window size to accommodate the image\n",
+    "        self.geometry(\"800x600\")  # Window size\n",
     "\n",
     "        # Label and entry for the movie title\n",
     "        self.label = ttk.Label(self, text=\"Enter Movie Title:\")\n",
     "        self.label.pack(pady=10)\n",
     "\n",
-    "        self.movie_entry = ttk.Entry(self, width=50)  # Increase the width of the entry\n",
+    "        self.movie_entry = ttk.Entry(self, width=50)\n",
     "        self.movie_entry.pack(pady=5)\n",
     "\n",
     "        # Button to get recommendations\n",
     "        self.recommend_button = ttk.Button(self, text=\"Get Recommendations\", command=self.display_recommendations)\n",
     "        self.recommend_button.pack(pady=10)\n",
     "\n",
-    "        # Text widget to display recommendations\n",
-    "        self.recommendations_text = tk.Text(self, width=60, height=10, wrap=tk.WORD)  # Adjust height for image space\n",
-    "        self.recommendations_text.pack(pady=10)\n",
-    "\n",
-    "        # Label to display an image\n",
-    "        self.image_label = ttk.Label(self)\n",
-    "        self.image_label.pack(pady=10)\n",
+    "        # Frame to hold the top 5 movie recommendations\n",
+    "        self.results_frame = tk.Frame(self)\n",
+    "        self.results_frame.pack(pady=10, fill=tk.BOTH, expand=True)\n",
     "\n",
     "    def display_recommendations(self):\n",
-    "        # Clear previous recommendations and image\n",
-    "        self.recommendations_text.delete(1.0, tk.END)\n",
-    "        self.image_label.config(image='')\n",
+    "        # Clear previous recommendations\n",
+    "        for widget in self.results_frame.winfo_children():\n",
+    "            widget.destroy()\n",
     "\n",
     "        # Get the movie title from the entry\n",
     "        movie_title = self.movie_entry.get()\n",
@@ -565,19 +550,19 @@
     "\n",
     "        # Display recommendations\n",
     "        if isinstance(recommendations, str):\n",
-    "            self.recommendations_text.insert(tk.END, recommendations)\n",
+    "            no_results_label = ttk.Label(self.results_frame, text=recommendations)\n",
+    "            no_results_label.pack()\n",
     "        else:\n",
-    "            self.recommendations_text.insert(tk.END, f\"Here are your top 5 movies similar to '{movie_title}':\\n\\n\")\n",
-    "            for index, row in recommendations.iterrows():\n",
-    "                self.recommendations_text.insert(tk.END, f\"{row['Original_Title']} (Similarity Score: {row['Similarity_Score']:.2f})\\n\")\n",
-    "\n",
-    "            # Load and display an image (example: a static image of a movie poster)\n",
-    "            image_path = \"example_poster.jpg\"  # Replace with the path to an actual image\n",
-    "            image = Image.open(image_path)\n",
-    "            image = image.resize((300, 450), Image.ANTIALIAS)  # Resize to fit the window\n",
-    "            photo = ImageTk.PhotoImage(image)\n",
-    "            self.image_label.config(image=photo)\n",
-    "            self.image_label.image = photo  # Keep a reference to the image\n",
+    "            tk.Label(self.results_frame, text=f\"Top 5 movies similar to '{movie_title}':\", font=('Arial', 14)).pack(pady=5)\n",
+    "            \n",
+    "            for idx, row in recommendations.iterrows():\n",
+    "                details = f\"{idx + 1}. {row['Original_Title']} ({row['Original_Language'].upper()}) - Similarity: {row['Similarity_Score']:.2f}\"\n",
+    "                details_label = tk.Label(self.results_frame, text=details, font=('Arial', 12))\n",
+    "                details_label.pack(anchor='w', padx=10, pady=5)\n",
+    "                \n",
+    "                # Add a separator line for visual separation\n",
+    "                separator = ttk.Separator(self.results_frame, orient='horizontal')\n",
+    "                separator.pack(fill='x', padx=5, pady=5)\n",
     "\n",
     "# Run the application\n",
     "if __name__ == \"__main__\":\n",
