Update Movie Recommendation System Models.ipynb

--- a/edit_data/Movie Recommendation System Models.ipynb
+++ b/edit_data/Movie Recommendation System Models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,29 +12,36 @@
     "import seaborn as sns\n",
     "import json\n",
     "import re\n",
-    "import nltk\n",
-    "import requests\n",
+    "import ast\n",
     "import tkinter as tk\n",
     "from tkinter import ttk\n",
-    "import ast\n",
-    "from PIL import Image, ImageTk\n",
-    "from io import BytesIO\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.neighbors import NearestNeighbors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\e'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\e'\n",
+      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_15560\\81423635.py:1: SyntaxWarning: invalid escape sequence '\\e'\n",
+      "  movies_df = pd.read_csv('..\\edit_data\\Lee\\cleaned_data\\movies_main.csv')\n"
+     ]
+    }
+   ],
    "source": [
-    "movies_df = pd.read_csv('../../edit_data/Lee/cleaned_data/movies_main.csv')  "
+    "movies_df = pd.read_csv('..\\edit_data\\Lee\\cleaned_data\\movies_main.csv')  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +58,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +214,7 @@
        "[2 rows x 28 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,9 +232,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\chanc\\AppData\\Local\\Temp\\ipykernel_15560\\3612850336.py:66: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  filtered_movies['match_percentage'] = filtered_movies.apply(lambda row: calculate_match_percentage(row, genre, release_year, keywords), axis=1)\n"
+     ]
+    }
+   ],
    "source": [
     "# Extract unique genres from the dataset\n",
     "def extract_genres(genre_str):\n",
@@ -298,10 +318,19 @@
     "    \n",
     "    # Sort by match percentage and limit to top 5\n",
     "    filtered_movies = filtered_movies.sort_values(by='match_percentage', ascending=False)\n",
-    "    top_movies = filtered_movies.head(5)[['Original_Title', 'match_percentage']]\n",
+    "    top_movies = filtered_movies.head(5)[['Original_Title', 'Vote_Average', 'match_percentage']]\n",
     "    \n",
-    "    # Format the output\n",
-    "    result = [f\"{row['Original_Title']} - {row['match_percentage']:.2f}%\" for _, row in top_movies.iterrows()]\n",
+    "    # Format the output with numbering, lines, and additional movie details\n",
+    "    result = [\n",
+    "        f\"{idx + 1}. {row['Original_Title']} - {row['match_percentage']:.2f}% match\\n\"\n",
+    "        f\"   Vote Average: {row['Vote_Average']}\\n----\"\n",
+    "        for idx, (_, row) in enumerate(top_movies.iterrows())\n",
+    "    ]\n",
+    "    \n",
+    "    # Remove the last line separator\n",
+    "    if result:\n",
+    "        result[-1] = result[-1].rstrip(\"\\n----\")\n",
+    "    \n",
     "    return result\n",
     "\n",
     "# Add a label and dropdown for genre selection\n",
@@ -329,7 +358,7 @@
     "ttk.Label(root, textvariable=result_var).grid(column=0, row=4, columnspan=2, padx=10, pady=10)\n",
     "\n",
     "# Run the application\n",
-    "root.mainloop()"
+    "root.mainloop()\n"
    ]
   },
   {
@@ -341,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
