Update Recommendation Models

--- a/edit_data/Movie Recommendation System Models.ipynb
+++ b/edit_data/Movie Recommendation System Models.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Key Libraries Used in the Movie Recommendation System**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +234,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**MODEL WITH MULTIPLE USER INPUT**"
+    "**Genre, Year, and Keyword-Based Movie Recommendation System**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This movie recommendation system is designed to provide personalized movie suggestions based on a combination of genre, release year, and keywords, leveraging both data filtering and intuitive user interaction.\n",
+    "\n",
+    "**Key Components:**\n",
+    "\n",
+    "**Data Extraction and Preparation:** The system processes movie genres, release years, and keywords to create a structured dataset that can be easily filtered. It ensures that genres are correctly parsed, and release years are accurately extracted from the movie dataset.\n",
+    "\n",
+    "**Recommendation Logic:** The system evaluates movies based on three criteria: genre, release year, and keyword relevance. It calculates a match percentage for each movie depending on how well it meets the selected criteria. The top 5 movies with the highest match percentages are then recommended.\n",
+    "\n",
+    "**User Interface:** The recommendations are delivered through a user-friendly GUI built with Tkinter. Users can select a genre, specify a release year, and enter keywords to receive tailored movie suggestions. The results are displayed with the movie title, match percentage, and vote average, making it easy to see why each movie was chosen"
    ]
   },
   {
@@ -365,7 +387,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**GUI MODEL WITH USER INPUT (ACTOR'S NAME)**"
+    "**Actor-Based Movie Recommendation System**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This movie recommendation system allows users to discover top movies featuring a specific actor, utilizing a combination of data processing and user-friendly interface design.\n",
+    "\n",
+    "**Key Components:**\n",
+    "\n",
+    "**Data Preparation:** The system ensures that cast data is correctly parsed and formatted, allowing for accurate filtering based on actor names. It also processes movie genres and release years to provide structured information.\n",
+    "\n",
+    "**Recommendation Logic:** The system searches for movies that include the specified actor, using a case-insensitive match across the parsed cast data. The resulting movies are then sorted by popularity, and the top 5 movies are presented to the user.\n",
+    "\n",
+    "**User Interface:** The recommendations are delivered through a clean and intuitive GUI built with Tkinter. Users can input an actor's name and quickly receive a list of movies featuring that actor, along with additional details like vote average and popularity"
    ]
   },
   {
@@ -449,7 +486,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**GUI Model with KNN Model**"
+    "**Movie Recommendation System Using TF-IDF and K-Nearest Neighbors**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This movie recommendation system leverages natural language processing and machine learning to suggest movies similar to a given title.\n",
+    "\n",
+    "**Key Components:**\n",
+    "\n",
+    "**TF-IDF Vectorization:** The system combines various textual features from the movie dataset, including the tagline, overview, and keywords. These combined features are then vectorized using TF-IDF (Term Frequency-Inverse Document Frequency), which converts the text into numerical representations, capturing the importance of words relative to the entire dataset.\n",
+    "\n",
+    "**K-Nearest Neighbors (KNN):** A Nearest Neighbors model is used to find the closest matches to the selected movie. The model computes the cosine similarity between the vectorized features of the movies. The top 5 movies with the highest similarity scores are then recommended as similar to the input movie"
    ]
   },
   {
