--- a/edit_data/Lee/Model_by_Cluster_KNN.ipynb
+++ b/edit_data/Lee/Model_by_Cluster_KNN.ipynb
@@ -11,6 +11,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "1. This model first combined all text variables that could potentially be used as keyword search:\n",
+    "- original_title\n",
+    "- overview\n",
+    "- tagline\n",
+    "- genres\n",
+    "- keywords\n",
+    "\n",
+    "2. These variables will undergo 'preprocessing' and extracted with REGEX and TDIdF Vectorizer. \n",
+    "3. The vectorized text will then be fitted using Kmeans Clustering.\n",
+    "4. For prediction, fit the vectorized text as X and the cluster value as y using KNN.\n",
+    "5. Run a prediction test by vectorizing the text input. \n",
+    "6. Develop a simple GUI with TKinter to simulate the prediction.\n",
+    "\n",
     "Reference doc: \n",
     "- https://kavita-ganesan.com/python-keyword-extraction/\n",
     "- https://www.kaggle.com/code/ibtesama/getting-started-with-a-movie-recommendation-system/notebook#Credits,-Genres-and-Keywords-Based-Recommender\n",
@@ -61,7 +74,7 @@
    "metadata": {},
    "source": [
     "### Step 1: Text Pre-Processing\n",
-    "Extract text string from the meta data file (Tagline, Overview, Keywords) using REGEX and ast. \n",
+    "Extract text string from the meta data file (Original Title, Tagline, Overview, Keywords) using REGEX and ast. \n",
     "\n",
     "Then, join all text into one series ['Joined_Strings'] (this is our feature for prediction).\n"
    ]
@@ -194,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Parse ['keywords'] and join with the rest of the texts. "
+    "Parse ['keywords'] and ['Genres'] and join with the rest of the texts. "
    ]
   },
   {
@@ -1019,48 +1032,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicted Clusters for new keywords: [0]\n",
-      "--------------------------------------\n",
-      "predict from keyword: pirate\n",
-      "predicted cluster: 0\n",
-      "                                         Original_Title  cluster  Popularity  \\\n",
-      "30422                                           Minions        0  547.488298   \n",
-      "41727                              Beauty and the Beast        0  287.253654   \n",
-      "24257                                        Big Hero 6        0  213.849907   \n",
-      "26350                                          Deadpool        0  187.860492   \n",
-      "26347  Pirates of the Caribbean: Dead Men Tell No Tales        0  133.827820   \n",
+      "predict from keyword: space\n",
+      "predicted cluster: 5\n",
+      "                              Original_Title  cluster  Popularity  \\\n",
+      "26351         Guardians of the Galaxy Vol. 2        5  185.330992   \n",
+      "14475                                 Avatar        5  185.070892   \n",
+      "24670  The Hunger Games: Mockingjay - Part 1        5  147.098006   \n",
+      "43730         War for the Planet of the Apes        5  146.161786   \n",
+      "535                             Blade Runner        5   96.272374   \n",
       "\n",
       "                                 Cleaned_Genres  \n",
-      "30422         Family Animation Adventure Comedy  \n",
-      "41727                    Family Fantasy Romance  \n",
-      "24257  Adventure Family Animation Action Comedy  \n",
-      "26350                   Action Adventure Comedy  \n",
-      "26347           Adventure Action Fantasy Comedy  \n"
+      "26351   Action Adventure Comedy Science Fiction  \n",
+      "14475  Action Adventure Fantasy Science Fiction  \n",
+      "24670        Science Fiction Adventure Thriller  \n",
+      "43730                 Drama Science Fiction War  \n",
+      "535              Science Fiction Drama Thriller  \n",
+      "----------------------------------------------------------------------------\n",
+      "predict from keyword: world war ii\n",
+      "predicted cluster: 4\n",
+      "                   Original_Title  cluster  Popularity  \\\n",
+      "26352  Captain America: Civil War        4  145.882135   \n",
+      "39100               Birkebeinerne        4   50.949523   \n",
+      "521              Schindler's List        4   41.725123   \n",
+      "2199              La vita è bella        4   39.394970   \n",
+      "24170                        Fury        4   36.713807   \n",
+      "\n",
+      "                         Cleaned_Genres  \n",
+      "26352  Adventure Action Science Fiction  \n",
+      "39100            Action Adventure Drama  \n",
+      "521                   Drama History War  \n",
+      "2199                       Comedy Drama  \n",
+      "24170                  War Drama Action  \n",
+      "----------------------------------------------------------------------------\n"
      ]
     }
    ],
    "source": [
     "# test data \n",
-    "new_keywords = ['pirate']\n",
+    "new_keywords = ['space', 'world war ii']\n",
     "X_new = vectorizer.transform(new_keywords)\n",
     "predicted_cluster = knn.predict(X_new)\n",
     "\n",
-    "print(\"Predicted Clusters for new keywords:\", predicted_cluster)\n",
+    "# print(\"Predicted Clusters for new keywords:\", predicted_cluster)\n",
     "\n",
     "\n",
     "for i in range(len(predicted_cluster)):\n",
-    "    print(\"--------------------------------------\")\n",
+    "    \n",
     "    print(\"predict from keyword:\", new_keywords[i])\n",
     "    print(\"predicted cluster:\", predicted_cluster[i])\n",
     "    filt = (df['cluster'] == predicted_cluster[i])\n",
-    "    print(df.loc[filt][['Original_Title','cluster','Popularity','Cleaned_Genres']].sort_values('Popularity',ascending=False).head())"
+    "    print(df.loc[filt][['Original_Title','cluster','Popularity','Cleaned_Genres']].sort_values('Popularity',ascending=False).head())\n",
+    "    print(\"----------------------------------------------------------------------------\")\n",
+    "    "
    ]
   },
   {
@@ -1073,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1140,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
